# bwdi-scratch

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  dummy.cxx
doc/: RATIONALE.md
driver/: CMakeLists.txt  dummy.cxx
driver/test/: client.cxx  driver.cxx  server.cxx
hack/: CMakeLists.txt
